# dosei

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  devcontainer.Dockerfile  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: dashboard.yml  dashboard.yml.disabled  doseid.yml  doseid.yml.disabled  macos.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  deploy.rs  file.rs  init.rs  main.rs  run.rs  table.rs
cli/src/app/: schema.rs
cli/src/auth/: mod.rs
cli/src/auth/ssh/: mod.rs  schema.rs
cli/src/cluster/: mod.rs  schema.rs
cli/src/cluster/command/: connect.rs  dashboard.rs  default.rs  deploy.rs  login.rs  logout.rs  logs.rs  ls.rs  mod.rs  set_default.rs
cli/src/command/: mod.rs  run.rs
cli/src/config/: mod.rs
cli/src/env/: mod.rs  set.rs  unset.rs
cli/src/ssh/: mod.rs
dashboard/: .env  Dockerfile  Makefile  next.config.mjs  package-lock.json  package.json
dashboard/src/app/: ConsoleLayout.js  layout.js  page.js
dashboard/src/app/[username]/: page.jsx
dashboard/src/app/[username]/[serviceName]/: page.jsx
dashboard/src/app/[username]/certificates/: page.jsx
dashboard/src/app/account/: page.js
dashboard/src/app/account/ssh-keys/: page.js
dashboard/src/app/login/: page.js
dashboard/src/app/login/cli/: page.js
dashboard/src/components/: AccountNav.jsx  DeploymentRow.jsx  Footer.jsx  ProfileMenu.jsx
dashboard/src/components/v2/: Container.jsx  PrimaryButton.jsx
dashboard/src/hooks/: useIsAuthenticated.jsx
dashboard/src/lib/: api.ts
dashboard/src/utils/: axiosUtils.js  sessionUtils.js
doseid/: Cargo.toml
doseid-macros/: Cargo.toml
doseid-macros/src/: lib.rs
doseid/.sqlx/: query-1c17f5ab18f9e698627914c86da5a577e817e6ffc07b5bda7107ad8cb71ab889.json  query-22dc948f4099a786084f67ea246443228e3f8097207a96b551e9c8a7d9416ec3.json  query-2adbae1d651b25103c080ba9ab6190be352fc1beabf737dc5e840fb9dec9caeb.json  query-2fabb536787b2f967071af550bfe9d7c7fe418823af40091471225f708fae9c4.json  query-34d34449c70e36bc3c2b7b53ff0ced38e005e27f87d8893cb1716b5c759c92d3.json  query-3b6abeac825ce0e042a76528ba88acaa9b87f50ead93d4d147ec5f8b11b85811.json  query-408f24b67f68cf3d636cdd8eca66d81486c5b5dd4c2469f57e49d00c7f3f443f.json  query-455492e3efdabc710d582e7912538d361938e89c4e9a580f9aa3d68d9d076a59.json  query-46af9b9fc03a629005a58c669db83a87fa357dbcde0c5706f1d912f3d404be9f.json  query-51750f9b323970accc7c8b09eb51aa7eb6ee18ae9923dcb72579c24adc585a20.json  query-5f15b71c2479dfdfca1ca13f03a94ae83db9f915c522a7dcd9dfc915d9de61b1.json  query-6f24b4eff769e7bc227c04a3bb2e16424bb0f75844d01ef2dce8452b2bc4a519.json  query-727877090a45e7bf942177929602f5dc34ce014da879695bdd5ff4224f52a32f.json  query-73ddcbb5a50a43406117e2d70da1df4afa4a0c6c7190c5bcd3bfc792b3f00374.json  query-7509bfd2e38d8e71f3dfbdb6b19bc407957bdc024997700d0e23410eda78c092.json  query-7d52ea9dd4d874f43a24c1afca3fa6eb5bb98c0c52e3a7d427a01564e7139e49.json  query-80cdfd6bf2aa99eaec37a90a4113cbb118b8716dfe6288d6ee3b8dacdb7523d8.json  query-844c0f9d20fac79743e53cde2aad9f10b93a274df4960dc5782413191c418f35.json  query-9562589bfbab03ec660bd8402569070dc783f007d7498c633d4f5939121661c1.json  query-a58bc8b99acdddfe0fdbf0b31394eb5fab8ea01310f5e85eb92278478ad0ede5.json  query-c415702e39125d6fea49f48b80bd376a53a03a09aae58fa7c6389da8547822dd.json  query-da78d7ca8ac6a7cee3a423f8b3d25f1c10fa4a83c6f3efcf7b8ad6adf3b36721.json  query-e4e0f4cf55ec33e503b780cd0f5e57591485625daf2f0c39d2d57ce6642a8858.json  query-e9c0ff01a33d5a144529e401042bd82ab9d23ad8efed53900b5c9d7759eaef63.json  query-f036ce466cced41f198d4f89b27483d12d782dbe495e9ca166932bd5dfa9f19b.json  query-f29417fde94fe5fd27cb27caee53342f0c8326d664e2abd3deff2ed206f1774c.json
doseid/migrations/: 20250312191212_init.sql  20250522153904_last_accessed.sql
doseid/src/: lib.rs  main.rs
doseid/src/account/: mod.rs  route.rs
doseid/src/auth/: route.rs
doseid/src/certificate/: mod.rs  route.rs
doseid/src/cluster/: dashboard.rs  mod.rs
doseid/src/config/: default.rs  mod.rs
doseid/src/container/: mod.rs
doseid/src/deployment/: mod.rs  route.rs
doseid/src/http/: health.rs  info.rs  mod.rs  proxy.rs
doseid/src/ingress/: mod.rs  route.rs
doseid/src/job/: mod.rs
doseid/src/service/: mod.rs  route.rs
doseid/src/session/: mod.rs
macos/: .gitignore
macos-rust/: Cargo.toml
macos-rust/src/: main.rs
macos/Dosei/: AppDelegate.swift  DoseiApp.swift  HealthManager.swift  Info.plist
macos/Dosei.xcodeproj/: project.pbxproj
macos/Dosei/Assets.xcassets/MenuBarIcon.imageset/: Contents.json
schema/: Cargo.toml
schema/src/: app.rs  cluster.rs  lib.rs  ssh.rs
scripts/: macos_release.sh  macos_rust_build.sh  post_install.sh
util/: Cargo.toml
util/src/: git.rs  lib.rs
