[workspace]
members = [ "cli","doseid", "doseid-macros", "macos-rust", "schema", "util"]
resolver = "2"

[workspace.package]
version = "0.0.3"
license = "AGPL-3.0"
repository = "https://github.com/doseidotio/dosei"
authors = ["Dosei Team <hi@dosei.io>"]
edition = "2021"

[workspace.dependencies]
base64 = "0.22.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
ssh-key = { version = "0.6.7", features = ["ed25519", "rsa", "rand_core"] }
regex = "1.11.1"
dialoguer = "0.11.0"
