[package]
name = "dosei"
default-run = "dosei"
description = "Dosei Command Line Interface (CLI)"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dosei-schema = { path = "../schema" }
dosei_util = { path = "../util" }

anyhow = "1.0.82"
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.46"
reqwest = { version = "0.12.3", features = ["blocking", "json", "multipart"] }
serde_json = "1.0.116"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
home = "0.5.11"
sysinfo = "0.30.11"
tempfile = "3.10.1"
git2 = { version = "0.18.3",features = ["vendored-openssl"] }
rpassword = "7.3.1"
ssh2 = "0.9.1"
dialoguer = { workspace = true }
base64 = "0.22.0"
ssh-key = { version = "0.6.7", features = ["ed25519", "rsa", "rand_core"] }
scopeguard = "1.2.0"
regex = { workspace = true }
colored = "3.0.0"
webbrowser = "1.0.4"
unicode-width = "0.2.0"
strip-ansi-escapes = "0.2.1"
