[package]
name = "doseid"
description = "Dosei Daemon"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
doseid-macros = { path = "../doseid-macros" }
dosei-schema = { path = "../schema" }

hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
async-trait = "0.1.86"
thiserror = "2.0.11"
libloading = "0.8.6"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
anyhow = "1.0.96"
axum = { version = "0.7.9", features = ["multipart"] }
tower-http = { version = "0.6.2", features = ["cors"] }
instant-acme = "0.7.2"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
once_cell = "1.20.2"
cached = "0.54.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
trust-dns-resolver = "0.23.2"
reqwest = { version = "0.12.12", features = ["json"] }
rcgen = "0.12.1"
openssl = { version = "0.10.71", features = ["vendored"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-native-tls"] }
utoipa = { version = "5.2.0", features = ["uuid", "chrono"] }
utoipa-axum = "0.1.2"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
axum-server = { version = "0.7.1", features = ["tls-rustls", "rustls"] }
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
bcrypt = "0.17.0"
rand = "0.9.0"
bollard = "0.18.1"
tempfile = "3.10.1"
futures-util = "0.3.31"
log = "0.4.21"
