[package]
name = "macos-rust"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dosei-schema = { path = "../schema" }
doseid = { path = "../doseid" }

anyhow = "1.0.96"
tokio = { version = "1.43.0", features = ["full"] }
bollard = "0.18.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-native-tls"] }
